--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,3 +68,29 @@ jobs:
       - name: Run tests
         working-directory: .
         run: mvn test
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: jar-artifact
+          path: ./target
+
+      - name: Build Docker image
+        working-directory: .
+        run: docker build -t pabloaugustocm/tpgerenciaindividual:latest .
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image to DockerHub
+        run: docker push pabloaugustocm/tpgerenciaindividual:latest
