--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build with Maven
         working-directory: .
-        run: mvn clean package
+        run: mvn clean package -DskipTests
 
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
